03-http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: internal-infra-app
  labels:
    app: app
    component: redirect-route
spec:
  parentRefs:
    - kind: Gateway
      name: app-gateway
      namespace: internal-infra-app
      port: 80
  hostnames:
    - "testapi.internal-infra.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            port: 443
